NIFI-16303 Integrated Property Encryption Provider to Framework